# paperwhisperer

./: CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
paperwhisperer/: __init__.py  app.py  cli.py  how_to_read_a_paper.txt
tests/: __init__.py  test_paperwhisperer.py
